    options as well as file outputs for the printing
    and serial/parallel port functions. (Wengier)
  - Added calculator for DOS (EVAL.EXE), which appears
    on Z drive and can calculate both simple (such as
    sin(0) and cos(0)) and many advanced mathematical
    expressions in either command-line mode and or the
    interactive mode. (Wengier)
  - You can now translate texts in DOSBox-X's drop-down
    menus. The message files as written by the config
    tool (CLI or GUI) will contain the menu texts for
    translations from the English language. (Wengier)
  - Added "bannercolortheme" config option (in [dosbox]
    section) so that users can change the background
    color theme of the welcome banner from the default
    blue color when DOSBox-X starts. (Wengier)
  - Added "pcaptimeout" config option (in the [ne2000]
    section) to specify a read timeout value for pcap
    in milliseconds, or default value (-1 on Windows
    or 3000 otherwise) will be used. (Wengier & Jookia)
  - Added "Save & Restart" button to the Configuration
    Tool's "Save" option for saving the config file and
    then automatically restarting DOSBox-X with this
    saved configuration. Command-line options -wcboot,
    -wcdboot and -wcpboot are added to CONFIG command
    which resemble -wc, -wcd, and -wcp options but will
    reboot DOSBox-X after writing configfile. Command-
    line option -bc (-bootconf) is also added to reboot
    with specified config file (or the primary loaded
    config file if not specified) directly. (Wengier)
  - The config option ttf.font will now search for TTF
    fonts in the directory as specified by the fontpath
    option in [printer] section too. (Wengier)
  - Added special properties to CONFIG command such as
    "screenwidth", "screenheight", "windowwidth", and
    "windowheight" so that commmands like "CONFIG -GET
    screenwidth" and "CONFIG -GET screenheight" will
    get the current screen width and height. (Wengier)