@@ -29,6 +29,7 @@
 #include "inout.h"
 #include "setup.h"
 #include "cpu.h"
+#include "control.h"
 #include "pc98_cg.h"
 #include "pc98_gdc.h"
 #include "zipfile.h"
@@ -2184,6 +2185,7 @@ void VGA_ChangedBank(void) {
 void MEM_ResetPageHandler_Unmapped(Bitu phys_page, Bitu pages);
 void MEM_ResetPageHandler_RAM(Bitu phys_page, Bitu pages);
 
+extern void DISP2_SetPageHandler(void);
 void VGA_SetupHandlers(void) {
 	vga.svga.bank_read_full = vga.svga.bank_read*vga.svga.bank_size;
 	vga.svga.bank_write_full = vga.svga.bank_write*vga.svga.bank_size;
@@ -2397,6 +2399,9 @@ void VGA_SetupHandlers(void) {
     non_cga_ignore_oddeven_engage = (non_cga_ignore_oddeven && !(vga.mode == M_TEXT || vga.mode == M_CGA2 || vga.mode == M_CGA4));
 
 range_done:
+#if C_DEBUG
+	if (control->opt_display2) DISP2_SetPageHandler();
+#endif
 	PAGING_ClearTLB();
 }
 
